[package]
name = "connector"
version = "0.1.1"
authors = ["Petr Sapak <petr.sapak@yahoo.com>"]
edition = "2021"
description = "CLI for automation of SMB connection creation."
license = "MIT"
readme = "README.md"
repository = "https://github.com/petrsapak/connector"

[dependencies]
dialoguer = "0.11.0"
console = "0.15.7"
windows-sys = { version = "^0.48", features = [ "Win32_NetworkManagement_WNet" ] }
cliclack = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"